--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.5)
-set(CMAKE_C_COMPILER "/opt/intel/compilers_and_libraries_2016.1.150/linux/bin/intel64/mpiicc")
-set(CMAKE_CXX_COMPILER "/opt/intel/compilers_and_libraries_2016.1.150/linux/bin/intel64/mpiicpc")
+set(CMAKE_C_COMPILER "/opt/intel/compilers_and_libraries/linux/bin/intel64/mpiicc")
+set(CMAKE_CXX_COMPILER "/opt/intel/compilers_and_libraries/linux/bin/intel64/mpiicpc")
 project(solctra)
 
 find_package(MPI)
@@ -12,6 +12,6 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 set(CMAKE_CXX_FLAGS_DEBUG "-g -DPRINT_FOR_DEBUG")
 set(CMAKE_CXX_FLAGS_RELEASE "")
 
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "/media/lchavarr/3635-3935/Dropbox/TEC/Tesis/code sources/solctra")
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "/home/ldcl289/tesis/code sources/cadejos")
 set(SOURCE_FILES main.cpp solctra.cpp solctra.h utils.h utils.cpp)
 add_executable(solctra ${SOURCE_FILES})
